# spectral-wave

./: .gitignore  README.md  main.py  pyproject.toml
gui/: main_window.py  math_editor.py
wave/: solver.py  spectral.py
